set(CYPHER_PARSER_ROOT "${CMAKE_SOURCE_DIR}/libcypher-parser")
set(CYPHER_PARSER_INCLUDE "${CYPHER_PARSER_ROOT}/lib/src")
set(CYPHER_PARSER_LIBRARY "${CYPHER_PARSER_ROOT}/lib/src/.libs/libcypher-parser.a")
add_custom_command(
  OUTPUT ${CYPHER_PARSER_LIBRARY}
  WORKING_DIRECTORY ${CYPHER_PARSER_ROOT}
  COMMAND ./autogen.sh
  COMMAND ./configure CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} CFLAGS='-fPIC'
  COMMAND make 
)
add_custom_target(cypher_parser DEPENDS ${CYPHER_PARSER_LIBRARY})

add_subdirectory(barneshut)
#add_subdirectory(barneshut)
#add_subdirectory(bc-inner)
#add_subdirectory(betweennesscentrality)
#add_subdirectory(bfs)
add_subdirectory(bp)
#add_subdirectory(buchberger)
#add_subdirectory(cholesky)
add_subdirectory(coloring)
#add_subdirectory(cuthill)
#add_subdirectory(graphoptimizer)
#add_subdirectory(ilu)
#add_subdirectory(leml)
#add_subdirectory(kruskalNew)
add_subdirectory(linear)
#add_subdirectory(pagerank)
#add_subdirectory(geoloc)
add_subdirectory(pmst)
#add_subdirectory(matrixcompletion)
#add_subdirectory(sloan)
#add_subdirectory(sssp)
#add_subdirectory(temporal_paths)
#add_subdirectory(triangular_solve)
add_subdirectory(svm)
add_subdirectory(meshsingularities)
#add_subdirectory(visualize)
#add_subdirectory(delaunayrefinement_exp)
#add_subdirectory(hpr)
add_subdirectory(hsssp)
#add_subdirectory(hpr_wl)
#add_subdirectory(hgen)
#add_subdirectory(connectedcomponents)
#add_subdirectory(microbenchmarks)
#add_subdirectory(partitioner)
#add_subdirectory(subgraphisomorphism)
add_subdirectory(python)
#add_subdirectory(lefdef_SPRoute)
#add_subdirectory(detailedrouter)
add_subdirectory(gatesizing)
add_subdirectory(cypher)
add_subdirectory(triangles_exp)
add_subdirectory(independentset)
add_subdirectory(surveypropagation)
add_subdirectory(matching)
#add_subdirectory(ordered)
#add_subdirectory(sta)
#add_subdirectory(k-cliques)
#add_subdirectory(asyncSTA)
#add_subdirectory(motifcounting)
add_subdirectory(sweeps)
add_subdirectory(querytest)
#add_subdirectory(gnn)
#add_subdirectory(motif)
