function(app name)
  add_executable(${name} ${ARGN})
  add_dependencies(apps ${name})
  target_link_libraries(${name} PRIVATE Katana::galois lonestar)
  install(TARGETS ${name} DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT apps EXCLUDE_FROM_ALL)
endfunction()

app(example-sssp-push-simple SSSPPushSimple.cpp)
app(example-sssp-simple SSSPsimple.cpp)
app(example-sssp-pull-simple SSSPPullSimple.cpp)
app(example-hello-world HelloWorld.cpp)
app(example-torus Torus.cpp)
app(example-torus-improved TorusImproved.cpp)
app(example-torus-construction TorusConstruction.cpp)
app(example-graph-traversal-serial GraphTraversalSerial.cpp)
app(example-graph-traversal-pull GraphTraversalPullOperator.cpp)
app(example-graph-traversal-push GraphTraversalPushOperator.cpp)
app(example-conflict-aware-torus ConflictAwareTorus.cpp)
app(example-spanningtree SpanningTree.cpp)
app(example-countlevels CountLevels.cpp)
app(example-malloc ThirdPartyMalloc.cpp)
app(example-wrapped-worklist ExampleWrappedWorklist.cpp)
app(example-triangle-count ExampleTriangleCount.cpp)

add_test_scale(small example-hello-world 2 10 NO_VERIFY)
add_test_scale(small example-torus 2 100 NO_VERIFY)
add_test_scale(small example-torus-improved 2 100 NO_VERIFY)
add_test_scale(small1 example-spanningtree INPUT rome99 INPUT_URI "${BASEINPUT}/reference/structured/rome99.gr" NO_VERIFY)
add_test_scale(small2 example-spanningtree INPUT rmat10 INPUT_URI "${BASEINPUT}/scalefree/rmat10.gr" NO_VERIFY)
add_test_scale(small example-triangle-count INPUT rmat15_cleaned_symmetric INPUT_URI "${BASEINPUT}/propertygraphs/rmat15_cleaned_symmetric" NOT_QUICK NO_VERIFY)
